06/02/2008  Joe Chuma <chuma@triumf.ca>

	v4.3.6

	* modified src/wxForms/CommandTextCtrl.cpp
	the cursor is now positioned at the end of the command line on a command line recall
	with the up/down arrow keys

30/01/2008  Joe Chuma <chuma@triumf.ca>

	v4.3.5

	* modified src/Graphics/GRA_window.cpp
	the REPLOT command was failing for some cases of XLOGBASE or YLOGBASE > 1, this is fixed.

	* modified src/Graphics/GRA_cartesianAxes.cpp
	the GRAPH command was failing if autoscaling was on and a linear axis was drawn first,
	with large max value, and then logbase set > 1, and GRAPH drawn again, this is fixed.

	* modified src/Graphics/GRA_cartesianAxes.cpp, src/Commands/CMD_scales.cpp
	setting the virtual min/max was not working properly when the number of large increments
	was set to zero.  This is fixed.

	* modified src/Graphics/GRA_postscript,GRA_font,GRA_fontControl
	attempting to rationalize the linux and windows fonts. Now both version try to use
	the same fonts.  Changed the font names used in PostScript output for better results.

	* modified many files
	to fix up unicode stream output when saving a session
	
11/01/2008  Joe Chuma <chuma@triumf.ca>

	v4.3.4

	* modified src/Expression/Expression.cpp, Workspace.cpp
	the FIT command was failing when the fit expression was an evaluatable text string, e.g.,
	FIT y=EVALUATE(f)  or  FIT y=1*f   where f is a string variable, this has been fixed

08/01/2008  Joe Chuma <chuma@triumf.ca>

	v4.3.3

	* modified src/Graphics/GRA_window.cpp
	the REPLOT command was failing when the axis min > max, now fixed

	* modified src/Commands/CMD_read.cpp
	when reading data from a file into vectors, a record in the data file which begins
	with the comment character, default '!', will be ignored

	* modified help files
	attempting better explanation of expression variables in the Introduction

07/01/2008  Joe Chuma <chuma@triumf.ca>

	v4.3.2

	* modified several source files to accomodate gcc v4.3 which "cleaned up" some