@@ -1,22 +1,0 @@
-clear
-defaults
-!
-generate x -2,,2 100
-!
-set legendon 1
-set legendsymbols 0
-!
-set curvecolor black
-graph 'sinh' x sinh(x)
-set curvecolor red
-graph\overlay 'cosh' x cosh(x)
-set curvecolor blue
-graph\overlay 'tanh' x tanh(x)
-set curvecolor green
-graph\overlay 'coth' x coth(x)
-set curvecolor purple
-graph\overlay 'sech' x sech(x)
-set curvecolor sienna
-graph\overlay 'csch' x csch(x)
-!
-replot
