@@ -455,7 +455,7 @@ void VisualizationWindow::OnImportPNG( wxCommandEvent &WXUNUSED(event) )
   // open the png file and open a window to display it in
   //
   wxImage image( filename, wxBITMAP_TYPE_PNG );
-  ImportWindow *importWindow = new ImportWindow( this, image );
+  ImportForm *importForm = new ImportForm( this, image );
 }
 
 void VisualizationWindow::OnImportJPEG( wxCommandEvent &WXUNUSED(event) )
@@ -473,7 +473,7 @@ void VisualizationWindow::OnImportJPEG( wxCommandEvent &WXUNUSED(event) )
   // open the file and open a window to display it in
   //
   wxImage image( filename, wxBITMAP_TYPE_JPEG );
-  ImportWindow *importWindow = new ImportWindow( this, image );
+  ImportForm *importForm = new ImportForm( this, image );
 }
 
 void VisualizationWindow::OnSavePS( wxCommandEvent &WXUNUSED(event) )
